--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,9 @@
 # Site settings
 title: 'EBHC Group | Education, Training & Implementation'
 email: ebhcgroup@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: The Evidence-based Health Care Group is an educational collaborative that provides customized consultation to organizations interested in implementing evidence-based health care.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://ebhcgroup.github.io/" # the base hostname & protocol for your site
+url: "http://ebhcgroup.github.io" # the base hostname & protocol for your site
 github_username:  ebhcgroup
 
 # Build settings
