watching master and commander

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 'EBHC Group | Education, Training & Implementation'
+title: 'EBHC Group | Evidence-Based Healthcare Education and Training'
 email: ebhcgroup@gmail.com
 description: The Evidence-based Health Care Group is an educational collaborative that provides customized consultation to organizations interested in implementing evidence-based health care.
 baseurl: "" # the subpath of your site, e.g. /blog/
